reformated the form partial.

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -11,19 +11,48 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :done %><br>
-    <%= f.check_box :done %>
-  </div>
-  <div class="field">
-    <%= f.label :priority %><br>
-    <%= f.number_field :priority %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
+
+    <table>
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>Done</th>
+        <th>Priority</th>
+        <th></th>
+
+      </tr>
+      </thead>
+
+      <tbody>
+
+          <tr>
+            <td>
+              <div class="field">
+                <%= f.label :name %><br>
+                <%= f.text_field :name %>
+              </div>
+            </td>
+            <td>
+              <div class="field">
+                <%= f.label :done %><br>
+                <%= f.check_box :done %>
+              </div>
+            </td>
+            <td>
+              <div class="field">
+                <%= f.label :priority %><br>
+                <%= f.number_field :priority %>
+              </div>
+            </td>
+            <td>
+              <div class="actions">
+                <%= f.submit %>
+              </div>
+            </td>
+          </tr>
+
+      </tbody>
+    </table>
+
 <% end %>
