In progress: messy

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing tasks</h1>
+<h1>Listing tasks v2</h1>
 
 <table>
   <thead>
@@ -27,5 +27,6 @@
 </table>
 
 <br>
+
 
 <%= link_to 'New Task', new_task_path %>
